# sekkei

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: Rust.yml
benches/: beatmaps.rs  requests.rs
src/: constants.rs  game.rs  lib.rs  replay.rs  util.rs
src/game/: beatmap.rs  mod.rs  score.rs
src/parser/: mod.rs
src/parser/beatmap/: mod.rs  objects.rs
src/parser/replays/: objects.rs
src/request/: mod.rs
tests/: beatmap.rs  test-http.js
tests/files/: IMAGINARY LIKE THE JUSTICE.osu  kakushigoto.osu
