[package]
name = "sekkei"
version = "0.1.0"
authors = ["Ausakura <17104706+Ausakura@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.1", features = ["full"] }
reqwest = { version = "0.10.10", features = ["json"] }
serde = {version = "1.0.104", features = ["derive"]}
serde_json = "1.0.61"

[dev-dependencies]
criterion = "0.3.3"
actix-rt = "*"

[[bench]]
name = "requests"
harness = false